--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://silentpayments.xyz/
 languageCode: en-us
-title: SilentPayments.xyz
+title: Silent Payments
 theme: hextra
 
 enableRobotsTXT: true
@@ -16,7 +16,7 @@ languages:
   en:
     languageName: English
     weight: 1
-    title: Hextra
+    title: Silent Payments
 
 markup:
   goldmark:
@@ -29,20 +29,16 @@ enableInlineShortcodes: true
 
 menu:
   main:
-    - identifier: documentation
-      name: Documentation
+    - identifier: learnmore
+      name: Learn More
       pageRef: /docs
       weight: 1
-    - identifier: about
-      name: About
-      pageRef: /about
-      weight: 2
     - name: Search
-      weight: 3
+      weight: 2
       params:
         type: search
     - name: GitHub
-      weight: 4
+      weight: 3
       url: "https://github.com/sethforprivacy/silentpaymentsxyz"
       params:
         icon: github
@@ -53,14 +49,10 @@ menu:
       params:
         type: separator
       weight: 1
-    - identifier: about
-      name: "About"
-      pageRef: "/about"
-      weight: 2
     - identifier: bip
       name: "Silent Payments BIP ↗"
       url: "https://bips.dev/352/"
-      weight: 3
+      weight: 2
 
 params:
   description: A simple site detailing Silent Payments, their value, their usage, and their current wallet support.
