Really maybe fix SVGs

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,7 +60,7 @@ http {
         index index.html; # Hugo generates HTML
 
         # Block site from being framed with X-Frame-Options and CSP
-        add_header Content-Security-Policy "frame-ancestors 'none'; frame-src 'self'; default-src 'none'; manifest-src 'self'; media-src 'self'; img-src 'self' http://www.w3.org https://www.w3.org; script-src 'self' 'unsafe-inline' https://gist.github.com; style-src 'self' 'unsafe-inline' https://github.githubassets.com; form-action; base-uri 'none'; font-src 'self'; connect-src 'self'";
+        add_header Content-Security-Policy "frame-ancestors 'none'; frame-src 'self'; default-src 'none'; manifest-src 'self'; media-src 'self'; img-src 'self' data:; script-src 'self' 'unsafe-inline' https://gist.github.com; style-src 'self' 'unsafe-inline' https://github.githubassets.com; form-action; base-uri 'none'; font-src 'self'; connect-src 'self'";
         add_header X-Frame-Options "DENY";
 
         # Security headers
