--- a/.github/workflows/build-site-and-docker-image.yml
+++ b/.github/workflows/build-site-and-docker-image.yml
@@ -1,4 +1,4 @@
-name: Build site and deploy custom image
+name: Build site and push custom image
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build-image:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
