--- a/.github/workflows/build-site-and-push-image.yml
+++ b/.github/workflows/build-site-and-push-image.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-image:
+  build-and-push:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -33,7 +33,7 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build clearnet
+      - name: Build site
         run: hugo --destination ./public
 
 
@@ -62,6 +62,7 @@ jobs:
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/silentpaymentsxyz:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
