--- a/.github/workflows/build-site-and-push-image.yml
+++ b/.github/workflows/build-site-and-push-image.yml
@@ -63,6 +63,7 @@ jobs:
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/silentpaymentsxyz:latest
+          cache-to: type=inline
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
