--- a/.github/workflows/test-site-build.yml
+++ b/.github/workflows/test-site-build.yml
@@ -53,8 +53,10 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: silentpaymentsxyz:test
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/silentpaymentsxyz:latest
+          cache-to: type=inline
 
       - name: Test-run image
         run: |
